fixed overflow bug for login form

--- a/app/stylesheets/custom.sass
+++ b/app/stylesheets/custom.sass
@@ -13,7 +13,6 @@ body
 
 #header
   // weworkintoulouse being a long name;...
-  overflow: hidden
   h1
     font-size: 35px
     margin: 0
@@ -24,7 +23,8 @@ body
     font-size: 30px
 #content h1
   font-size: 35px
-
+#global_sign_in_form.open
+  height: 120px
 
 #home_to
   text-transform: none
